Removed file size argument in /upload/multipart/init
